5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4311/executions/1712_2499.log
== SUBMITION (2019-05-15 12:03:59) 
-- CODE:
from math import*

k = float(input())

e = 0
c = 0

while (c < K):
	e = e + (1/factorial(c))
	c = c + 1
print(round(e,8))	
-- EXECUTION TIME:
0.146417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2499/main.py", line 8, in <module>
    while (c < K):
NameError: name 'K' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:04:00) 
-- CODE:
from math import*

k = float(input())

e = 0
c = 0

while (c < K):
	e = e + (1/factorial(c))
	c = c + 1
print(round(e,8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (c < K):
NameError: name 'K' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:04:35) 
-- CODE:
from math import*

k = float(input())

e = 0
c = 0

while (c < k):
	e = e + (1/factorial(c))
	c = c + 1
print(round(e,8))	
-- EXECUTION TIME:
0.212916
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
